--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item py-2 px-2">
-              <a class="nav-link active" aria-current="page" href="#index.html">Home</a>
+              <a class="nav-link active" aria-current="page" href="#home">Home</a>
             </li>
             <li class="nav-item py-2 px-2">
               <a class="nav-link" href="#about">About</a>
             </li>
             <li class="nav-item py-2 px-2">
-              <a class="nav-link" href="#">Visit Us</a>
+              <a class="nav-link" href="#visit-us">Visit Us</a>
             </li>
           </ul>
         </div>
@@ -167,7 +167,7 @@
     </section>
 
    
-  <section class="visit-us mt-3">
+  <section class="visit-us mt-3" id="visit-us">
       <div class="container">
         <h2 class="text-center main-judul py-5">Visit Us</h2>
         <div class="row">
@@ -258,8 +258,7 @@
     </div>
 </footer>
 
-              
-  
+
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/jquery-3.7.1.min.js"></script>
     <script src="assets/js/main.js"></script>
