--- a/index.html
+++ b/index.html
@@ -208,6 +208,38 @@
         
   </section>
 
+  <section>
+    <div class="container mt-5 mb-5">
+      <h2 class="judul">Testimonial</h2>
+      <div id="testimonialCarousel" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-inner">
+  
+              <div class="carousel-item active text-center">
+                <img src="assets/img/pempekk.jpg" class="rounded-3 mb-3" width="800" height="300" alt=" User 1">
+
+                  <p class="lead">"Palembang itu keren! Makanannya enak, terutama pempek. Jembatan Ampera juga ikonik banget!"</p>
+                  <h5>- Andi, Jakarta</h5>
+              </div>
+  
+              <div class="carousel-item text-center">
+                  <img src="assets/img/tembok-benteng-kuto-besak-di-kota-palembang.jpg" class="rounded-3 mb-3" width="800" height="300" alt="User 2">
+                  <p class="lead">"Saya suka wisata sejarahnya, Benteng Kuto Besak dan Museum Sultan Mahmud Badaruddin II wajib dikunjungi!"</p>
+                  <h5>- Siti, Bandung</h5>
+              </div>
+  
+              <div class="carousel-item text-center">
+                  <img src="assets/img/ampera.jpg" class="rounded-3 mb-3" width="800" height="300" alt="User 3">
+                  <p class="lead">"Sungai Musi di malam hari itu indah banget. Suasananya romantis dan bikin betah!"</p>
+                  <h5>- Budi, Surabaya</h5>
+              </div>
+  
+          </div>
+      </div>
+  </div>
+  </section>
+  
+  </section>
+
   <section id="contact" class="contact-us py-5 bg-light">
     <div class="container text-center">
         <h2 class="mb-4">Contact Us</h2>
@@ -245,13 +277,13 @@
     <div class="container">
         <div class="row align-items-center">
             <div class="col-md-6 text-center text-md-start">
-                <p class="mb-0">&copy; 2025 Palembang. All rights reserved.</p>
+                <p class="mb-0">&copy; Lib Dev 2025. All rights reserved.</p>
             </div>
             <div class="col-md-6 text-center text-md-end">
                 <ul class="list-unstyled d-flex justify-content-center justify-content-md-end footer-links mb-0">
                     <li><a href="#home" class="text-white text-decoration-none">Home</a></li>
                     <li><a href="#about" class="text-white text-decoration-none">About</a></li>
-                    <li><a href="#" class="text-white text-decoration-none">Pricing</a></li>
+                    <li><a href="#" class="text-white text-decoration-none">Testimonial</a></li>
                 </ul>
             </div>
         </div>
