--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
         
   </section>
 
-  <section>
+  <section id="testimonial" class="testimonial py-5">
     <div class="container mt-5 mb-5">
       <h2 class="judul">Testimonial</h2>
       <div id="testimonialCarousel" class="carousel slide" data-bs-ride="carousel">
@@ -283,7 +283,7 @@
                 <ul class="list-unstyled d-flex justify-content-center justify-content-md-end footer-links mb-0">
                     <li><a href="#home" class="text-white text-decoration-none">Home</a></li>
                     <li><a href="#about" class="text-white text-decoration-none">About</a></li>
-                    <li><a href="#" class="text-white text-decoration-none">Testimonial</a></li>
+                    <li><a href="#visit-us" class="text-white text-decoration-none">Visit Us</a></li>
                 </ul>
             </div>
         </div>
